--- a/college_dev-main/views/pages/profile.ejs
+++ b/college_dev-main/views/pages/profile.ejs
@@ -132,6 +132,7 @@
                             if (`<%= user.college_roll_no%>`.trim() == `28021`.trim()) {
                                 var chatLink = document.getElementById('chat');
                                 chatLink.href = "/admin";
+                                chatLink.textContent= "Admin Page";
 
                             }
                         </script>
